# AFM-Hack

./: .gitignore  README.md
invistigator/: .env.example  .gitignore  README.md  invistigator_session  pyproject.toml  results.jsonl
invistigator/scripts/: login.py
invistigator/src/invistigator/: api.py  config.py  graph.py  linkdetect.py  pipeline.py  schemas.py  scraper.py  scraper_browser.py  storage.py  trigger.py
invistigator/tests/: test_linkdetect.py  test_osint.py  test_storage_trigger.py
server/: .env.example  Dockerfile  README.md  UI_QUICKSTART.md  audio_detect.py  casino_clip_detector.py  docker-compose.yml  media_watch.db  pyproject.toml  scam_image_detector.py
server/app/: config.py  main.py  parser_control.py
server/app/api/: architecture.py  dedup.py  deps.py  investigation.py  jobs.py  parser.py  pipelines.py  review.py  serializers.py  ui.py  videos.py
server/app/db/: models.py  repository.py  session.py
server/app/dedup/: hashing.py  neardup.py
server/app/llm/: summary.py
server/app/models/: loader.py
server/app/pipelines/: aggregator.py  architecture.py  base.py  explain.py  extract.py  orchestrator.py  plugins.py  real.py  registry.py  stubs.py
server/app/queue/: base.py  factory.py  memory.py  redis.py
server/app/sources/: base.py  stub.py
server/app/static/: index.html  styles.css
server/app/storage/: base.py  factory.py  local.py
server/app/worker/: analysis.py  base.py  handlers.py  triage.py
server/docs/superpowers/: sdd-progress.md
server/output/ocr/: C__David__Programming__hakaton__server__buffer__incoming__311897e17318414e90976e3eb2ddc3fa__DW3yNQIDT_1.webm.txt  C__David__Programming__hakaton__server__buffer__incoming__4751d5f7d4684126a617e9fc7adebbbc__DZCaYdFI2HE.webm.txt  C__David__Programming__hakaton__server__buffer__incoming__4d65e869903f4b32915a080fc2aac153__bonus1.mp4.txt  C__David__Programming__hakaton__server__buffer__incoming__59cc1c9a53a84d1dbd1fd003ac47f04e__DZIRjnUtX9P.webm.txt  C__David__Programming__hakaton__server__buffer__incoming__6416bb7a84ad4ac4833f74b13628d6ef__DZuiFqUAgaf.webm.txt  C__David__Programming__hakaton__server__buffer__incoming__705730e8f80b4d9eb7049efc2ff01e9d__DWBrQ7qCBOP.webm.txt  (+113 more)
server/plugins/: README.md  _example_template.py  contact_spam_checker.py  deepfake_detector.py
server/tests/: conftest.py  test_aggregator.py  test_api.py  test_config.py  test_config_driven.py  test_config_investigation.py  test_db_models.py  test_db_repository.py  test_dedup.py  test_domain_types.py  test_extract.py  test_integration.py  test_investigation_proxy.py  test_job_video.py  test_ocr_normalization.py  test_queue_memory.py  test_real_registry.py  test_registry.py  test_storage_local.py  test_stubs.py  test_verdict.py
telegramcrawler/: .env.example  README.md  aimw.db  pyproject.toml
telegramcrawler/scripts/: login.py
telegramcrawler/src/aimw/: api.py  (+9 more)
telegramcrawler/tests/: test_analyzer.py  test_api.py  test_config.py  test_crawler.py  test_domain.py  test_pipeline.py  test_prefilter.py  test_scoring.py  test_storage.py
(+120 files in other folders)
