[project]
name = "invistigator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "instaloader>=4.11",
    "pyotp>=2.9",
    "httpx[socks]>=0.27",
    "requests[socks]>=2.31",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "python-whois>=0.9",
    "dnspython>=2.6",
    "Pillow>=10.0",
    "imagehash>=4.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
